Fix Content Image on Small Mobile

--- a/src/assets/components/ContentImage/ContentImage.scss
+++ b/src/assets/components/ContentImage/ContentImage.scss
@@ -9,4 +9,10 @@
   @include tablet {
     max-width: fit-content;
   }
+
+  @include mobile {
+    .main-image {
+      max-width: 310px;
+    }
+  }
 }
